# account-procurement-tools

./: .gitignore  README.md
account-procurement-pipeline/: README.md  bootstrap-windows.ps1  install_models.py  requirements.txt  run.ps1  run.sh  setup.ps1  setup.sh
account-procurement-pipeline/config/: channels.txt  countries.json  keywords.json
account-procurement-pipeline/src/: build_sheet.py  extract.py  geo_clues.py  lang_translate.py  pipeline.py  scrape.py
account-procurement-pipeline/tests/: test_build_sheet.py  test_extract.py
tgspyder/: .gitignore  LICENSE  README.md  README.txt  pyproject.toml  requirements.txt
tgspyder/src/tgspyder/: cli.py
