[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgspyder"
version = "1.0.0"
description = "TGSpyder - Telegram OSINT CLI Tool by Darksight Analytics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Valdemar Balle"}]
dependencies = [
  "telethon>=1.34.0",
  "pysocks>=1.7.1",
  "colorama>=0.4.6",
]

[project.scripts]
tgspyder = "tgspyder.cli:main"
